tests/NormalTests/paczka1/small_fuzzy/71841172.err
Error in line 6: 5nmIKHHo2 A208 985,7
Error in line 11: E8P8MWz75 S610 42,88
Error in line 8: Wv59Clns A208 58,1
